--- a/BOT_SE/pom.xml
+++ b/BOT_SE/pom.xml
@@ -102,6 +102,14 @@
 	<version>2.8.2</version>
 </dependency>
    
+  <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<dependency>
+   <groupId>io.github.bonigarcia</groupId>
+   <artifactId>webdrivermanager</artifactId>
+   <version>3.7.1</version>
+</dependency>
+   
 <!-- For window web driver -->  
 <!--   
 <dependency>
