--- a/BOT_SE/pom.xml
+++ b/BOT_SE/pom.xml
@@ -109,7 +109,10 @@
    <artifactId>webdrivermanager</artifactId>
    <version>3.7.1</version>
 </dependency>
-   
+<dependency>
+	<groupId>com.googlecode.json-simple</groupId>
+	<artifactId>json-simple</artifactId>
+</dependency>   
 <!-- For window web driver -->  
 <!--   
 <dependency>
