--- a/BlackListToolCrawler/src/main/resources/application.properties
+++ b/BlackListToolCrawler/src/main/resources/application.properties
@@ -3,8 +3,10 @@ spring.datasource.driver-class-name:com.mysql.jdbc.Driver
 spring.datasource.url:jdbc:mysql://localhost:3306/webinforcement_demo?useSSL=false
 #spring.datasource.username:myuser
 #spring.datasource.password:P@$$@123++pj
-spring.datasource.username:root
-spring.datasource.password:root
+spring.datasource.username:testuser
+spring.datasource.password:M@123rkscan
+
+
 spring.datasource.hikari.maximum-pool-size=2
 
  
@@ -13,7 +15,7 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQL5Dialect
 
-#server.port=8082
+server.port=8088
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
