--- a/BlackListToolCrawler/src/main/resources/application.properties
+++ b/BlackListToolCrawler/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.datasource.driver-class-name:com.mysql.jdbc.Driver
-#spring.datasource.url:jdbc:mysql://172.168.1.25:3306/webinforcement_demo?useSSL=false
-spring.datasource.url:jdbc:mysql://localhost:3306/webinforcement_demo?useSSL=false
-#spring.datasource.username:myuser
-#spring.datasource.password:P@$$@123++pj
+
+#spring.datasource.url:jdbc:mysql://localhost:3306/webinforcement_demo?useSSL=false
+#spring.datasource.username:root
+#spring.datasource.password:admin
+
+spring.datasource.url:jdbc:mysql://172.168.1.15:3306/webinforcement_demo?useSSL=false
 spring.datasource.username:testuser
 spring.datasource.password:M@123rkscan
-
 
 spring.datasource.hikari.maximum-pool-size=2
 
