--- a/BOT_SE/pom.xml
+++ b/BOT_SE/pom.xml
@@ -109,10 +109,10 @@
    <artifactId>webdrivermanager</artifactId>
    <version>3.7.1</version>
 </dependency>
-<dependency>
-	<groupId>com.googlecode.json-simple</groupId>
-	<artifactId>json-simple</artifactId>
-</dependency>   
+   <dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+		</dependency>
 <!-- For window web driver -->  
 <!--   
 <dependency>
@@ -165,6 +165,13 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
+		<repository>
+          <id>central</id>
+          <url>https://repo1.maven.org/maven2</url>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+        </repository>
 	</repositories>
 
 	<pluginRepositories>
@@ -184,5 +191,12 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</pluginRepository>
+		<pluginRepository>
+          <id>central</id>
+          <url>https://repo1.maven.org/maven2</url>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+        </pluginRepository>
 	</pluginRepositories>
 </project>
