--- a/BOT_SE/src/main/resources/application.properties
+++ b/BOT_SE/src/main/resources/application.properties
@@ -4,9 +4,18 @@ spring.datasource.driver-class-name:com.mysql.jdbc.Driver
 #spring.datasource.username:myuser
 #spring.datasource.password:P@$$@123++pj
 
-spring.datasource.url:jdbc:mysql://localhost:3306/webinforcement_demo?useSSL=false
-spring.datasource.username:root
-spring.datasource.password:root
+#spring.datasource.url:jdbc:mysql://localhost:3306/webinforcement_demo?useSSL=false
+#spring.datasource.username:root
+#spring.datasource.password:root
+
+spring.datasource.url:jdbc:mysql://172.168.1.15:3306/webinforcement_demo?useSSL=false
+spring.datasource.username:testuser
+spring.datasource.password:M@123rkscan
+
+#spring.datasource.url:jdbc:mysql://182.73.134.27:3306/webinforcement_demo?useSSL=false
+#spring.datasource.username:root
+#spring.datasource.password:M@1234rkscan
+
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
@@ -19,8 +28,10 @@ spring.datasource.hikari.maximum-pool-size=5
 #spring.session.jdbc.initialize-schema: always
 #spring.batch.job.enabled=false
 server.port=8082
+spring.iwl.url="http://localhost:8088/crwaler"
+
 #-----------mail server
-#spring.mail.host:111.118.215.251
-#spring.mail.port:25
-#spring.mail.test-connection:true
+spring.mail.host:111.118.215.251
+spring.mail.port:25
+spring.mail.test-connection:true
 
