Changes in Auto BOT 	modified:   pom.xml 	modified:   src/main/java/com/pradeep/pj/BotSeApplication.java 	modified:   src/main/java/com/pradeep/pj/BotSeApplication1.java 	modified:   src/main/java/com/pradeep/pj/WhitelistValidation.java 	modified:   src/main/java/com/pradeep/pj/repo/Greylist_Repository.java 	modified:   src/main/java/com/pradeep/pj/repo/Stored_project_setupRepository.java 	modified:   src/main/java/com/pradeep/pj/repo/impl/IWLDataProcess.java 	modified:   src/main/java/com/pradeep/pj/service/Stored_project_setupService.java 	modified:   src/main/resources/application.properties

--- a/BOT_SE/src/main/resources/application.properties
+++ b/BOT_SE/src/main/resources/application.properties
@@ -27,8 +27,8 @@ spring.datasource.hikari.maximum-pool-size=5
 #server.connection-timeout=-1
 #spring.session.jdbc.initialize-schema: always
 #spring.batch.job.enabled=false
-server.port=8082
-spring.iwl.url="http://localhost:8088/crwaler"
+#server.port=8082
+spring.iwl.url="http://172.168.1.13:8080/Crawler4SingleSite"
 
 #-----------mail server
 spring.mail.host:111.118.215.251
