--- a/BlackListToolCrawler/src/main/resources/application.properties
+++ b/BlackListToolCrawler/src/main/resources/application.properties
@@ -8,6 +8,11 @@ spring.datasource.url:jdbc:mysql://172.168.1.15:3306/webinforcement_demo?useSSL=
 spring.datasource.username:testuser
 spring.datasource.password:M@123rkscan
 
+
+#spring.datasource.url:jdbc:mysql://182.73.134.27:3306/webinforcement_demo?useSSL=false
+#spring.datasource.username:root
+#spring.datasource.password:M@1234rkscan
+
 spring.datasource.hikari.maximum-pool-size=2
 
  
@@ -16,7 +21,7 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQL5Dialect
 
-server.port=8088
+#server.port=8088
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
@@ -26,3 +31,5 @@ server.compression.enabled=true
 spring.http.encoding.enabled: false
 
 server.servlet.context-path=/crawler
+
+spring.tellynagari=tellynagari.com
