--- a/BOT_SE/src/main/resources/application.properties
+++ b/BOT_SE/src/main/resources/application.properties
@@ -12,11 +12,14 @@ spring.datasource.url:jdbc:mysql://172.168.1.15:3306/webinforcement_demo?useSSL=
 spring.datasource.username:testuser
 spring.datasource.password:M@123rkscan
 
+
+
 #spring.datasource.url:jdbc:mysql://182.73.134.27:3306/webinforcement_demo?useSSL=false
 #spring.datasource.username:root
 #spring.datasource.password:M@1234rkscan
 
-spring.jpa.show-sql=true
+
+spring.jpa.show-sql=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQL5Dialect
