--- a/BOT_SE2/src/main/resources/application.properties
+++ b/BOT_SE2/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.password:M@123rkscan
 #spring.datasource.username:root
 #spring.datasource.password:M@1234rkscan
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQL5Dialect
@@ -27,7 +27,7 @@ spring.datasource.hikari.maximum-pool-size=5
 #server.connection-timeout=-1
 #spring.session.jdbc.initialize-schema: always
 #spring.batch.job.enabled=false
-server.port=8089
+#server.port=8089
 #-----------mail server
 spring.mail.host:111.118.215.251
 spring.mail.port:25
